chore: implement initial CRUD application. Connect the app to MySql database

--- a/.gitignore
+++ b/.gitignore
@@ -211,4 +211,7 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+# secrets
+application-dev.yml
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij,macos,java
