--- a/.gitignore
+++ b/.gitignore
@@ -213,5 +213,6 @@ Temporary Items
 
 # secrets
 application-dev.yml
+.env
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,macos,java
